Fix fuzzy font on mobile iOS

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -101,6 +101,15 @@ blockquote {
 }
 
 /**
+ * Fix fuzzy text on iOS
+ */
+@include media-query($on-palm) {
+  h1, h2, h3, h4, h5, h6, p, a, li, blockquote {
+    -webkit-transform: translate3d(0,0,0);
+  }
+}
+
+/**
  * Wrapper
  */
 .wrapper {
